edited my website to be better responsive to the sizes I used in media query; removed images and code  sections based on code errors when inspected in console; changed color theme; fixed my image sizes to fit screen; tryingto remove horizontal scroll bar currently

--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,44 @@
 :root {
-    --dark: #303030;
-    --white: #fff;
+    --dark: #202020;
+    --white: #FFFFFF;
     --font: Georgia;
-    --grey: #dad7d7;    
-    --red: red;    
+    --grey: #707070;    
+    --yellow: #FFDF6C; 
+    --dark-grey: #3F3F3F;   
 }
 
 body {
-    background-color: black;
+    background-color: var(--grey);
     color: var(--white);
     font-style: var(--font);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
 main {
     background-color: var(--dark);
-    color: var(--grey);
+    color: var(--white);
+    text-align: center;
 }
 
-#navigation a {
-    color: var(--grey)
-    border-bottom: var(--grey);
+#navigation {
+    display: inline-flex;
+    position: relative;
+    left: 60%;    
+    margin-top: 2px;
+    font-size: 30px;   
+    text-align: end; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/*Used 'auto' to take up space within the nav links*/ 
-.navigation {
-    display: flex;
-    margin: auto;
-    height:auto;
-}
-
-#navigation a {
-    color: var(--grey);
+#navigation a {    
+    color: var(--white);
+    text-align: right;  
 }
 
 #navigation a:hover {
-    color: var(--dark);
+    color: var(--yellow);
     transition: 0.8s; 
     background-color: var(--grey);
     border-bottom: var(--dark) solid 3px; 
@@ -44,7 +48,7 @@ main {
 /*Used an'inline-flex' to make flex container an inline element*/
 #navigation a, #Contact-links a {
     font-size: 22px;
-    text-decoration: none;    
+    text-decoration: overline underline;    
     display: inline-flex;
     margin-right: 30px;
     margin-top: 10px; 
@@ -59,8 +63,7 @@ main {
 
 #Contact-links a {
     color: var(--grey)   
-    border-bottom: var(--grey) solid 3px;
-    font-size: 22px;
+    border-bottom: var(--grey) solid 2px;     
 }
 
 #Contact-links a {
@@ -68,14 +71,15 @@ main {
 }
 
 #Contact-links a:hover {
-    color: var(--dark);
+    color: var(--yellow);
     background-color: var(--grey);
-    padding: 5px;
-    border-radius: 5px;
+    padding: 10px;
+    border-radius: 7px;
 }
 
-#navigation, #Contact-links {
-    padding-top: 15px;
+#Contact-links {
+    padding-top: 20px;
+    padding-bottom: 55px;
 }
 
 #name {
@@ -86,105 +90,108 @@ main {
     border-radius: 0 20px 20px 0;
 }
 
-#subtitle {
+ #subtitle {
     background-color: var(--grey);
     color: var(--dark);
-    font-size: 40px;
-    right: 48px;
-    bottom: 48px;
+    justify-content: ;
+    letter-spacing: 0.1em;
+    margin-top: 6px;
+   font-size: 30px;
+   border-radius: 20px;    
+}
+
+header {
     padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: var(--dark);
+    color: #ffffff;
+}
+
+header h1 {
+    display: inline-block;
+    font-size: 48px;
+    box-sizing: border-box;
     border-radius: 20px;
-    margin-top: 100xpx;
-    margin-right: 30px;
-}
-
-
-.header1  {
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0px;      
-    flex-wrap: wrap;
-    background-color:var(--dark);
-    color: var(--grey);
-    
-}
-
-.header2 {
-    display: flex;   
-    height: auto;
-    width: 100%;   
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.header2 div {
-    margin: 20px;
-}
-
-.aside1, .content {
-    height: auto;
-    margin: 30px 0px;
-}
-
-.aside1 {
-    font-size: 55px;
-}
-
-.block-section {
-    display: flex;
-    justify-content: space-around;  
 }
 
 .content {
-    width: 70%;
-    font-size: 24px;
-    border-left: var(--white) solid 5px;    
-    padding-left: 50px;
-    word-spacing: 6px;
+    padding-left: 30px;    
+    width: 30%;
+    border-left: none;
+    font-size: 20px;
 }
 
 .content p {
-    line-height: 24px;
+    font-size: 22px;
+}  
+
+.aside1 {
+    height: 35%;    
+    font-size: 55px;
+    text-align: center;
+    border-bottom-width: 1px solid var(--white);
+    padding-bottom: 3px;
 }
 
-#box2 {
-    display: flex;
-    flex-wrap: wrap;
+#about {
+    text-align: left;
+    margin-left: 35px;
 }
 
-.project {    
-   border: var(--dark) solid 2px;
+#projects img {
+    justify-content: center;
+}
+
+#projects img:hover {
+border: solid 5px navy;
+margin: -2px;  
+}
+
+#projects {       
    margin: 18px;
-   position: relative;
+   position: relative;   
+   bottom: 200px;
+   left: 150px;
+   bottom: 50px;
 }
 
-.projects2 {
-    position: relative;
-    flex: 43%;
-    margin: 1%;
-    border: var(--grey) solid 4px;
+#projects2 {
+    width: 30px;
+    font-size: 24px;       
+    position: relative;    
+    flex: 60%;
+    margin: 1%;  
+    word-spacing: 6px;  
 }
 
-.projects2 img {
-    width: 100%;
-    min-width: 150px;    
+#projects2 img {
+    width: 80%;    
+    float: inline-start;
 }
 
-.projects2 img:hover {
+#projects2 img:hover {
    border: solid 5px navy;
    margin: -2px;   
+} 
+
+
+.work2 {
+    display: flex;
+    margin: 18px;
+    position: relative;   
+    bottom: 200px;
+    left: 150px;
+    bottom: 50px;    
 }
 
-.information {
-    position: absolute;
+.information {    
     bottom: 40%;
-    padding-left: 20px;
-    padding-right: 11px;
+    padding-block: 15px;
     background-color: var(--dark);
 }
 
-.information h4 {
-    font-size: 18px;
+#information .h4 {
+    font-size: 12px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-top: 4px;
 }
@@ -197,12 +204,29 @@ main {
         margin-right: 30px;
         font-size: 32px;
         border-radius: 15px;
-        float: left;
+        text-align: center;
+    }
+ 
+    #name {
+        text-align: center;
+
     }
 
-    .header2 {
-            flex-direction: column;
-        }
+    #navigation {
+        text-align: center;
+        flex-direction: row;
+        display: flex;
+        justify-content: center;
+        left: 2%;
+        
+    }
+
+    .content p {
+        text-align: center;
+        justify-content: center;
+        right: 55%;
+        display: inline-block;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -218,15 +242,20 @@ main {
         font-size: 20px;
     }
 
-    .block-section {
+   
+    
+
+    #navigation {
         flex-direction: column;
-        justify-content: center;        
+        display: flex;
+        justify-content:center;
+        flex-wrap: wrap;        
     }
 
-    .aside {
-        text-align: center;
-        width: 100%;
-        font-size: 48px;
+    #about {
+        flex-direction: column;
+        flex-wrap: wrap;
+        text-align: left;
     }
 }
     
@@ -253,7 +282,29 @@ main {
     }
 
     .content p {
-        font-size: 12px;     
+        font-size: 12px;  
+        display: inline-block;   
     }
-}
-     
+
+    #navigation {       
+        justify-content: center;
+        flex-direction: column;       
+    }
+
+    #projects2 {
+        display: flex;
+        flex-direction: column;
+       
+    }
+
+    #projects, #projects2 img{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        height: auto;
+        width: 100px;
+       
+    }
+
+    .     
